--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,31 @@
-name: Android Build
+name: Android Build Release Workflow
 
-on: pull_request
+on:
+  push:
+    branches: [ master ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Set Up JDK              // 1
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
-      - name: Change wrapper permissions  // 2
-        run: chmod +x ./gradlew
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
 
-      - name: Run Tests                   // 3
+      - name: Run Tests
         run: ./gradlew test
 
-      - name: Build Project               // 4
+      - name: Build Project
         run: ./gradlew assemble
+
+      - name: Build Debug APK
+        run: bash ./gradlew :app:assembleDebug
+
+      - name: build release
+        run: ./gradlew assembleRelease
