--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,26 +5,22 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: set up JDK 1.8
+      - uses: actions/checkout@v1
+
+      - name: Set Up JDK              // 1
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
-      - name: Unit tests
-        run: bash ./gradlew test --stacktrace
+      - name: Change wrapper permissions  // 2
+        run: chmod +x ./gradlew
 
-      - name: Run Tests
+      - name: Run Tests                   // 3
         run: ./gradlew test
 
-      - name: Build Project
+      - name: Build Project               // 4
         run: ./gradlew assemble
-
-      - name: Build Debug APK
-        run: bash ./gradlew :app:assembleDebug
-
-      - name: build release
-        run: ./gradlew assembleRelease
